# simple-celestial-body-sim

./: .gitignore  Cargo.toml  README.md  data.json
src/: camera.rs  cel_body.rs  cli.rs  lib.rs  main.rs  sci_float.rs
